@@ -111,7 +111,7 @@
 #	Path to script that creates debug symbols in a /usr/lib/debug
 #	shadow tree.
 %__debug_install_post   \
-   @RPMCONFIGDIR@/find-debuginfo.sh %{_builddir}/%{buildsubdir} \
+   @RPMCONFIGDIR@/find-debuginfo.sh %{_builddir}/%{?buildsubdir}\
 %{nil}
 
 #	Template for debug information sub-package.
@@ -131,30 +131,6 @@ package or when debugging this package.\
 %{nil}
 
 %_defaultdocdir		%{_usr}/doc
-
-# Use internal dependency generator rather than external
-# find-provides/find-requires)?
-%_use_internal_dependency_generator	1
-
-#	Path to scripts to autogenerate package dependencies.
-%__find_provides	@RPMCONFIGDIR@/rpmdeps --provides
-%__find_requires	@RPMCONFIGDIR@/rpmdeps --requires
-#%__find_conflicts	???
-#%__find_obsoletes	???
-
-%__perl_provides	@RPMCONFIGDIR@/perl.prov
-%__perl_requires	@RPMCONFIGDIR@/perl.req
-
-# fixowner, fixgroup, and fixperms are run at the end of hardcoded setup
-# These macros are necessary only for legacy compatibility, and have moved
-# to per-platform macro configuration (i.e. @RPMCONFIGDIR@/<arch>-<os>/macros)
-#%__id_u		@__ID_U@
-#%__chown_Rhf		@__CHOWN_RHF@
-#%__chgrp_Rhf		@__CHGRP_RHF@
-#%_fixowner		[ `%{__id_u}` = '0' ] && %{__chown_Rhf} root
-#%_fixgroup		[ `%{__id_u}` = '0' ] && %{__chgrp_Rhf} @ROOT_GROUP@
-#%_fixperms		%{__chmod} -Rf @FIXPERMS@
-#
 
 #	The path to the gzip executable (legacy, use %{__gzip} instead).
 %_gzipbin		%{__gzip}
@@ -341,6 +317,43 @@ package or when debugging this package.\
 #
 # Note: The default value should be 0 for legacy compatibility.
 %_missing_doc_files_terminate_build	1
+
+#
+# Use internal dependency generator rather than external helpers.
+%_use_internal_dependency_generator	0
+
+#
+# Path to scripts to autogenerate package dependencies,
+#
+# Note: Used iff _use_internal_dependency_generator is zero.
+#%__find_provides	@RPMCONFIGDIR@/rpmdeps --provides
+#%__find_requires	@RPMCONFIGDIR@/rpmdeps --requires
+%__find_provides	@RPMCONFIGDIR@/find-provides
+%__find_requires	@RPMCONFIGDIR@/find-requires
+#%__find_conflicts	???
+#%__find_obsoletes	???
+
+#
+# Path to scripts to autogenerate per-interpreter package dependencies,
+#
+# Note: Used iff _use_internal_dependency_generator is non-zero. The
+# helpers are also used by @RPMCONFIGDIR@/rpmdeps {--provides|--requires).
+%__perl_provides	@RPMCONFIGDIR@/perl.prov
+%__perl_requires	@RPMCONFIGDIR@/perl.req
+
+#
+# fixowner, fixgroup, and fixperms are run at the end of hardcoded setup
+# These macros are necessary only for legacy compatibility, and have moved
+# to per-platform macro configuration (i.e. @RPMCONFIGDIR@/<arch>-<os>/macros)
+#
+# Note: These are no longer enabled by default.
+#%__id_u		@__ID_U@
+#%__chown_Rhf		@__CHOWN_RHF@
+#%__chgrp_Rhf		@__CHGRP_RHF@
+#%_fixowner		[ `%{__id_u}` = '0' ] && %{__chown_Rhf} root
+#%_fixgroup		[ `%{__id_u}` = '0' ] && %{__chgrp_Rhf} @ROOT_GROUP@
+#%_fixperms		%{__chmod} -Rf @FIXPERMS@
+#
 
 #==============================================================================
 # ---- Database configuration macros.
